--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon server"
+    "serve": "nodemon api/index"
   },
   "author": "zo'obo Bekolo eric jose",
   "license": "ISC",
